Fixed sonar code smells.
Signed-off-by: Dennis Labordus <dennis.labordus@alliander.com>